start with integration of bootstrap 4

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-menus
+  - jekyll-assets
+  - bootstrap
 
 url: "https://coinium.ch"
 baseurl: ""
