added travis ci build

--- a/_config.yml
+++ b/_config.yml
@@ -90,6 +90,16 @@ exclude:
   - Gemfile.lock
   - LICENSE
   - README.md
+  - assets
+  - node_modules
 
 created-by: Coinium
 creator-url: https://coinium.ch
+
+assets:
+  prefix: "/assets"
+  assets:
+    - "*.png"
+    - "css/styles.css"
+  sources:
+    - "_assets/"
