--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@
 _site/
 .sass-cache/
 .jekyll-metadata
+
+node_modules/
+package-lock.json
+/_assets/css/
+/_assets/js/
+.asset-cache/
+
 ### Windows template
 # Windows thumbnail cache files
 Thumbs.db
@@ -107,4 +114,3 @@ Temporary Items
 
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
-
