--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,8 @@ sudo: required
 services:
   - docker
 
-jobs:
-  includes:
-    - language: node_js
-      node_js: 6
-      script:
-        - npm install
+language: ruby
+rvm: 2.3
 
-    - language: ruby
-      rvm: 2.3
-      script:
-        - bundle install
+script:
+  - bundle install
