--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,9 @@ services:
 language: ruby
 rvm: 2.3
 
+before_script:
+  - curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
+  - sudo apt-get install nodejs
+
 script:
   - bundle install
