--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "gulp-minify": "^1.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0"
   },
