use dev config if not on master

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
   - gulp
 
   - bundle install
-  - bundle exec jekyll build
+  - bash jekyll-build.sh
 
   - docker build -t coinium/coinium .
 
