--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
-    "gulp-minify": "^1.0.0",
     "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
