--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,10 @@ paginate: 5
 collections:
   waehrung:
     output: true
-    permalink: /:collection/:name
+    permalink: /wiki/:collection/:name
+  glossar:
+    output: true
+    permalink: /wiki/:collection/:name
 
 # Default YAML values (more information on Jekyll's site)
 defaults:
@@ -88,13 +91,20 @@ defaults:
       path: "wiki"
     values:
       layout: "wiki_entry"
-  - scope:
+  -
+    scope:
       path: ""
       type: waehrung
     values:
       layout: waehrung
       creator: Unbekannt
       creation_year: Unbekannt
+  -
+    scope:
+      path: ""
+      type: glossar
+    values:
+      layout: "wiki_entry"
 
 # Exclude these files from production site
 exclude:
