added contribute page

--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ avatar: "/img/avatar.jpg"
 nav-links:
   Home: ""
   Wiki: "wiki"
+  Mitmachen: "about/mitmachen"
   
 # --- Footer options --- #
 
