--- a/_config.yml
+++ b/_config.yml
@@ -116,6 +116,7 @@ exclude:
   - package.json
   - package-lock.json
   - nginx.conf
+  - vorlagen
 
 created-by: Coinium
 creator-url: https://coinium.ch
