--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "devDependencies": {
     "bootstrap": "^4.0.0-beta",
     "del": "^3.0.0",
+    "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-copy": "^1.0.1",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
     "jquery": "^3.2.1",
