--- a/_config.yml
+++ b/_config.yml
@@ -34,11 +34,7 @@ algolia:
 feed:
   path: atom.xml
 
-# --- Navigation bar options --- #
-
-# Image to show in the navigation bar - image must be a square (width = height)
-# Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar.jpg"
+avatar: "/img/apple-touch-icon.png"
 
 # List of links in the navigation bar
 nav-links:
