--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "algoliasearch": "^3.24.3",
+    "algoliasearch-helper": "^2.21.2",
     "bootstrap": "^4.0.0-beta",
     "del": "^3.0.0",
     "font-awesome": "^4.7.0",
@@ -14,7 +16,9 @@
     "gulp-copy": "^1.0.1",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
+    "hogan.js": "^3.0.2",
     "jquery": "^3.2.1",
+    "moment": "^2.18.1",
     "popper.js": "^1.12.5"
   },
   "scripts": {
