--- a/nginx.conf
+++ b/nginx.conf
@@ -56,8 +56,8 @@ http {
 
     index index.html index.htm;
     
-    if ($host == 'www.coinium.ch') {
-      rewrite ^/(.*)$ http://coinium.ch/$1 permanent;
+    if ($host = 'www.coinium.ch') {
+      rewrite ^/(.*)$ https://coinium.ch/$1 permanent;
     }
 
     if (!-f "${request_filename}index.html") {
